# autonomy

./: README.md
bayes_filtering/kalman_filter_lidar/: CMakeLists.txt
bayes_filtering/kalman_filter_lidar/src/: kalman_filter.h  tracking.cpp
bayes_filtering/unscented_kf/src/: main.cpp  ukf.cpp
camera/opencv_basics/src/: change_pixels.cpp  create_matrix.cpp  load_image_3.cpp
camera_lidar_fusion/Creating 3D-Objects/cluster_with_roi/src/: cluster_with_roi.cpp
camera_lidar_fusion/cluster_lidar_with_roi/src/: cluster_with_roi.cpp
camera_lidar_fusion/lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp
camera_lidar_fusion/object_detection_with_yolo/src/: detect_objects_2.cpp
collision_detection/time_to_collision_estimate/camera/src/: compute_ttc_camera.cpp
collision_detection/time_to_collision_estimate/lidar/src/: compute_ttc_lidar.cpp  structIO.cpp
realsense/: example.hpp
realsense/capture/: CMakeLists.txt  rs-capture.cpp
realsense/dnn/: CMakeLists.txt  readme.md  rs-dnn.cpp
realsense/hello-realsense/: CMakeLists.txt
tracking/MSE/: CMakeLists.txt
tracking/UKF/src/: main.cpp  ukf.cpp
tracking/kalman_filter_lidar/src/: main.cpp  measurement_package.h  tracking.cpp  tracking.h
tracking/unscented_kf/: CMakeLists.txt
tracking/unscented_kf/src/: main.cpp  ukf.cpp
tracking_image_features/harris_corner_detection/cornerness_harris/src/: cornerness_harris.cpp
tracking_image_features/intensity_gradient_and_filtering/gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp  magnitude_sobel.cpp
tracking_image_features/keypoint_descriptors/describe_keypoints/src/: describe_keypoints.cpp
